[package]
name = "marktex"
version = "0.1.0"
authors = ["Dongjie Chen <midwinter1993@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = { version = "0.8", default-features = false }
clap = "3.0.0-beta.2"
